<?xml version="1.0"?>
<package format="2">
  <name>rviz_plugin_ItemModifingTopic</name>
  <version>0.1.0</version>
  <description>The rviz_plugin_ItemModifingTopic package</description>

  <maintainer email="mahsand@nifty.com">devemin</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>rviz</depend>
  <depend>tf</depend>

  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>


  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
